--- a/16-agent/Dockerfile.rhel7
+++ b/16-agent/Dockerfile.rhel7
@@ -1,19 +1,19 @@
 FROM rhel7
 # Thermostat Agent Image.
 #
-# Volumes:
-#  * /opt/rh/rh-thermostat16/root/usr/share/thermostat
 # Environment:
-#  * $THERMOSTAT_CMDC_PORT      - The command channel listen port.
-#  * $THERMOSTAT_CMDC_ADDR      - The command channel listen address.
 #  * $THERMOSTAT_AGENT_USERNAME - User name for the thermostat agent to use
 #                                 for connecting to storage.
 #  * $THERMOSTAT_AGENT_PASSWORD - Password for the thermostat agent to use
 #                                 for connecting to storage.
 #  * $THERMOSTAT_DB_URL         - The storage URL to connect to.
+#  * $APP_USER                  - The application user the Java app Thermostat
+#                                 shall monitor runs as.
 
 ENV THERMOSTAT_VERSION=1.6 \
     HOME=/root
+    HOME=/home/th-user \
+    APP_USER="th-user"
 
 ENV SUMMARY="A monitoring and serviceability tool for OpenJDK."	\
     DESCRIPTION="The powerful, free and open source instrumentation tool for the Hotspot JVM."
@@ -27,26 +27,43 @@ LABEL summary="$SUMMARY" \
       version="1.6" \
       release="1"
 
-ENV THERMOSTAT_CMDC_ADDR 127.0.0.1
 ENV THERMOSTAT_CMDC_PORT 12000
-ENV THERMOSTAT_DB_URL http://127.0.0.1:8999/thermostat/storage
 ENV THERMOSTAT_HOME /opt/rh/rh-thermostat16/root/usr/share/thermostat
 ENV THERMOSTAT_JARS /opt/rh/rh-thermostat16/root/usr/share/java/thermostat
-ENV USER_THERMOSTAT_HOME /root/.thermostat-1.6
+ENV USER_THERMOSTAT_HOME /home/th-user/thermostat-1.6
 
-EXPOSE $THERMOSTAT_CMDC_PORT
+EXPOSE ${THERMOSTAT_CMDC_PORT}
+
+RUN useradd -u 10011 -r -g 0 -d /home/th-user -s /sbin/nologin \
+      -c "Default Thermostat Container User" th-user
+
+# Create USER_THERMOSTAT_HOME parent folder, ensure any UID can write to it.
+RUN mkdir -p /home/th-user && \
+    chown -R th-user:0 /home/th-user && \
+    chmod g+x /home && chmod g+wx /home/th-user
 
 RUN yum install -y yum-utils && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --enable rhel-7-server-optional-rpms && \
-    INSTALL_PKGS="rh-thermostat16" && \
+    yum-config-manager --enable rhel-7-server-ose-3.2-rpms && \
+    INSTALL_PKGS="rh-thermostat16 nss_wrapper" && \
     yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
+    yum erase -y java-1.8.0-openjdk && \
     yum erase -y java-1.8.0-openjdk-headless && \
     yum clean all
 
 COPY thermostat-user-home-config ${USER_THERMOSTAT_HOME}
 COPY root /
+
+# Ensure any UID can read/write to files in /home/th-user
+RUN chown -R th-user:0 ${HOME} && \
+    find ${HOME} -type d -exec chmod g+rwx '{}' \; && \
+    find ${HOME} -type f -exec chmod g+rw '{}' \;
+
+WORKDIR ${HOME}
+
+USER th-user
 
 # Get prefix path and path to scripts rather than hard-code them in scripts
 ENV CONTAINER_SCRIPTS_PATH=/usr/share/container-scripts/thermostat \
@@ -58,13 +75,6 @@ ENV CONTAINER_SCRIPTS_PATH=/usr/share/container-scripts/thermostat \
 ENV BASH_ENV=${CONTAINER_SCRIPTS_PATH}/scl_enable \
     ENV=${CONTAINER_SCRIPTS_PATH}/scl_enable \
     PROMPT_COMMAND=". ${CONTAINER_SCRIPTS_PATH}/scl_enable"
-
-# For the agent vm-profiler to work thermostat jars need to be available to other containers
-# using the volumes from this container.
-VOLUME ${THERMOSTAT_JARS}
-VOLUME ${THERMOSTAT_HOME}
-
-WORKDIR ${THERMOSTAT_HOME}
 
 ENTRYPOINT ["container-entrypoint"]
 CMD [ "run-thermostat-agent" ]
