--- a/16-agent/Dockerfile.rhel7
+++ b/16-agent/Dockerfile.rhel7
@@ -22,7 +22,7 @@ LABEL io.k8s.description="A monitoring and serviceability tool for OpenJDK." \
 LABEL com.redhat.component="rh-thermostat16-agent-docker" \
       name="rhscl/thermostat-16-agent-rhel7" \
       version="1.6" \
-      Release="1" \
+      release="1" \
       architecture="x86_64"
 
 ENV THERMOSTAT_CMDC_ADDR 127.0.0.1
