--- a/16-agent/Dockerfile.rhel7
+++ b/16-agent/Dockerfile.rhel7
@@ -38,6 +38,7 @@ RUN chown -R default:0 ${HOME} && \
  
 RUN yum install -y yum-utils && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
+    yum-config-manager --enable rhel-7-server-rpms && \
     yum-config-manager --enable rhel-7-server-optional-rpms && \
     yum-config-manager --enable rhel-7-server-ose-3.2-rpms && \
     INSTALL_PKGS="rh-thermostat16 nss_wrapper" && \
