Fix permissions for /opt/app-root.

--- a/16-agent/Dockerfile.rhel7
+++ b/16-agent/Dockerfile.rhel7
@@ -28,13 +28,13 @@ LABEL summary="$SUMMARY" \
 ENV THERMOSTAT_CMDC_PORT 12000
 ENV THERMOSTAT_HOME /opt/rh/rh-thermostat16/root/usr/share/thermostat
 ENV THERMOSTAT_JARS /opt/rh/rh-thermostat16/root/usr/share/java/thermostat
-ENV USER_THERMOSTAT_HOME ${HOME}/.thermostat-1.6
+ENV USER_THERMOSTAT_HOME /opt/app-root/.thermostat-1.6
 
 EXPOSE ${THERMOSTAT_CMDC_PORT}
 
 # Create USER_THERMOSTAT_HOME parent folder, ensure any UID can write to it.
-RUN chown -R default:0 ${HOME} && \
-    chmod g+x /home && chmod g+wx ${HOME}
+RUN chown -R default:0 /opt/app-root && \
+    chmod g+x /home && chmod g+wx /opt/app-root
  
 RUN yum install -y yum-utils && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
@@ -51,8 +51,8 @@ COPY root /
 
 # Ensure any UID can read/write to files in /opt/app-root
 RUN chown -R default:0 /opt/app-root && \
-    find ${HOME} -type d -exec chmod g+rwx '{}' \; && \
-    find ${HOME} -type f -exec chmod g+rw '{}' \;
+    find /opt/app-root -type d -exec chmod g+rwx '{}' \; && \
+    find /opt/app-root -type f -exec chmod g+rw '{}' \;
 
 WORKDIR ${HOME}
 
