--- a/1-agent/Dockerfile.rhel7
+++ b/1-agent/Dockerfile.rhel7
@@ -40,7 +40,7 @@ RUN yum install -y yum-utils && \
     yum erase -y java-1.8.0-openjdk-headless && \
     yum clean all
 COPY thermostat-user-home-config ${USER_THERMOSTAT_HOME}
-ADD root /
+COPY root /
 
 # Get prefix path and path to scripts rather than hard-code them in scripts
 ENV CONTAINER_SCRIPTS_PATH=/usr/share/container-scripts/thermostat \
