Check installed packages using rpm -V

--- a/1-agent/Dockerfile.rhel7
+++ b/1-agent/Dockerfile.rhel7
@@ -36,9 +36,12 @@ EXPOSE $THERMOSTAT_CMDC_PORT
 RUN yum install -y yum-utils && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --enable rhel-7-server-optional-rpms && \
-    yum install -y --setopt=tsflags=nodocs thermostat1 && \
+    INSTALL_PKGS="thermostat1 && \
+    yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
+    rpm -V $INSTALL_PKGS && \
     yum erase -y java-1.8.0-openjdk-headless && \
     yum clean all
+
 COPY thermostat-user-home-config ${USER_THERMOSTAT_HOME}
 COPY root /
 
