--- a/16-storage/Dockerfile.rhel7
+++ b/16-storage/Dockerfile.rhel7
@@ -36,7 +36,9 @@ EXPOSE 8080
 RUN yum install -y yum-utils && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --enable rhel-7-server-optional-rpms && \
-    yum install -y --setopt=tsflags=nodocs rh-thermostat16 && \
+    INSTALL_PKGS="rh-thermostat16 && \
+    yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
+    rpm -V $INSTALL_PKGS && \
     yum erase -y java-1.8.0-openjdk-headless && \
     yum clean all
     
