--- a/16-storage/Dockerfile.rhel7
+++ b/16-storage/Dockerfile.rhel7
@@ -18,15 +18,17 @@ FROM rhel7
 ENV THERMOSTAT_VERSION=1.6 \
     HOME=/home/tomcat
 
-LABEL io.k8s.description="A monitoring and serviceability tool for OpenJDK." \
-      io.k8s.display-name="Thermostat Storage 1.6"
+ENV SUMMARY="A monitoring and serviceability tool for OpenJDK."	\
+    DESCRIPTION="The powerful, free and open source instrumentation tool for the Hotspot JVM."
 
-# Labels consumed by Red Hat build service
-LABEL com.redhat.component="rh-thermostat16-storage-docker" \
+LABEL summary="$SUMMARY" \
+      description="$DESCRIPTION" \
+      io.k8s.description="$SUMMARY" \
+      io.k8s.display-name="Thermostat Storage 1.6" \
+      com.redhat.component="rh-thermostat16-storage-docker" \
       name="rhscl/thermostat-16-storage-rhel7" \
       version="1.6" \
-      release="1" \
-      architecture="x86_64"
+      release="1"
 
 ENV THERMOSTAT_HOME=/opt/rh/rh-thermostat16/root/usr/share/thermostat
 ENV THERMOSTAT_ROOT=/opt/rh/rh-thermostat16/root
