--- a/1-agent/Dockerfile
+++ b/1-agent/Dockerfile
@@ -36,7 +36,7 @@ ENV USER_THERMOSTAT_HOME /root/.thermostat
 EXPOSE $THERMOSTAT_CMDC_PORT
 
 RUN yum install -y centos-release-scl-rh && \
-    INSTALL_PKGS="thermostat1 && \
+    INSTALL_PKGS="thermostat1" && \
     yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
     yum erase -y java-1.8.0-openjdk-headless && \
