--- a/1-agent/Dockerfile.rhel7
+++ b/1-agent/Dockerfile.rhel7
@@ -38,7 +38,7 @@ EXPOSE $THERMOSTAT_CMDC_PORT
 RUN yum install -y yum-utils && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --enable rhel-7-server-optional-rpms && \
-    INSTALL_PKGS="thermostat1 && \
+    INSTALL_PKGS="thermostat1" && \
     yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
     yum erase -y java-1.8.0-openjdk-headless && \
