Add centos-scl testing repository

--- a/16-agent/Dockerfile
+++ b/16-agent/Dockerfile
@@ -36,7 +36,8 @@ ENV USER_THERMOSTAT_HOME /root/.thermostat-1.6
 
 EXPOSE $THERMOSTAT_CMDC_PORT
 
-RUN yum install -y yum-utils && \
+RUN yum install -y yum-utils centos-release-scl-rh && \
+    yum-config-manager --enable centos-sclo-rh-testing && \
     INSTALL_PKGS="rh-thermostat16" && \
     yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
