tests: use the tested image as a base for wildfly builder

--- a/16-agent/test/wildfly-builder-image-th-agent/Dockerfile
+++ b/16-agent/test/wildfly-builder-image-th-agent/Dockerfile
@@ -6,7 +6,7 @@
 # https://github.com/openshift-s2i/s2i-wildfly folder 10.1
 
 # Only 1.6-12 and up has proper support to be used as base image
-FROM rhscl/thermostat-16-agent-rhel7
+FROM __IMAGE_NAME__
 
 EXPOSE 8080
 
