Downstream changes for thermostat-16-storage (#14)
* Add support for multiple client/agent users.

* Remove hsperfdata_root file in /tmp.

* Add basic test script.

* Don't remove java-1.8.0-openjdk-headless

From: Severin Gehwolf <sgehwolf@redhat.com>
Date: Fri, 17 Mar 2017 09:50:00 +0100

We used to remove this in order to reduce image size
because rh-thermostat16 hard-coded a dependency on
java-1.7.0-openjdk-devel and, thus, the image had two
JDKs installed, JDK 8 and JDK 7. JDK 8 was dragged in
by some transitive deps. Currently only JDK 8 gets
installed (no JDK 7) and - therefore - this can get
removed.

* Added 16-agent and 16-storage to VERSIONS

* Sync centos Dockerfile with Dockerfile.rhel7

Remove hsperfdata_root file in /tmp
Don't remove java-1.8.0-openjdk-headless

* tests: Use centos based images by default

* Use the same values for description and io.k8s.description

* tests: try to work out mongodb image name from IMAGE_NAME

Also pulls in newest container-common-scripts

--- a/16-storage/Dockerfile
+++ b/16-storage/Dockerfile
@@ -23,7 +23,7 @@ ENV SUMMARY="A monitoring and serviceability tool for OpenJDK."	\
 
 LABEL summary="$SUMMARY" \
       description="$DESCRIPTION" \
-      io.k8s.description="$SUMMARY" \
+      io.k8s.description="$DESCRIPTION" \
       io.k8s.display-name="Thermostat Storage 1.6" \
       com.redhat.component="rh-thermostat16-storage-docker" \
       name="centos/thermostat-16-storage-centos7" \
@@ -40,7 +40,6 @@ RUN yum install -y yum-utils centos-release-scl-rh && \
     INSTALL_PKGS="rh-thermostat16" && \
     yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
-    yum erase -y java-1.8.0-openjdk-headless && \
     yum clean all
     
 COPY thermostat-user-home-config ${THERMOSTAT_ROOT}
@@ -60,6 +59,7 @@ ENV BASH_ENV=${CONTAINER_SCRIPTS_PATH}/scl_enable \
 RUN mkdir -p /home/tomcat && chown -R tomcat:tomcat /home/tomcat
 
 RUN [ "thermostat-storage-bootstrap" ]
+RUN rm -rf /tmp/hsperfdata_root
 
 # the tomcat uid is generally 91
 USER 91
