--- a/16-agent/Dockerfile.rhel7
+++ b/16-agent/Dockerfile.rhel7
@@ -35,8 +35,11 @@ EXPOSE ${THERMOSTAT_CMDC_PORT}
 # Create USER_THERMOSTAT_HOME parent folder, ensure any UID can write to it.
 RUN chown -R default:0 /opt/app-root && \
     chmod g+x /home && chmod g+wx /opt/app-root
- 
-RUN yum install -y yum-utils && \
+
+# We need to call 2 (!) yum commands before being able to enable repositories properly
+# This is a workaround for https://bugzilla.redhat.com/show_bug.cgi?id=1479388
+RUN yum repolist > /dev/null && \
+    yum install -y yum-utils && \
     yum-config-manager --disable \* &> /dev/null && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
     yum-config-manager --enable rhel-7-server-rpms && \
