--- a/16-storage/Dockerfile.rhel7
+++ b/16-storage/Dockerfile.rhel7
@@ -35,8 +35,13 @@ ENV THERMOSTAT_ROOT=/opt/rh/rh-thermostat16/root
 
 EXPOSE 8080
 
-RUN yum install -y yum-utils && \
+# We need to call 2 (!) yum commands before being able to enable repositories properly
+# This is a workaround for https://bugzilla.redhat.com/show_bug.cgi?id=1479388
+RUN yum repolist > /dev/null && \
+    yum install -y yum-utils && \
+    yum-config-manager --disable \* &> /dev/null && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
+    yum-config-manager --enable rhel-7-server-rpms && \
     yum-config-manager --enable rhel-7-server-optional-rpms && \
     INSTALL_PKGS="rh-thermostat16" && \
     yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
