--- a/16-agent/Dockerfile.rhel7
+++ b/16-agent/Dockerfile.rhel7
@@ -59,6 +59,9 @@ RUN chown -R default:0 /opt/app-root && \
 
 WORKDIR ${HOME}
 
+# Reset permissions of filesystem to default values
+RUN rpm-file-permissions
+
 USER 1001
 
 # Get prefix path and path to scripts rather than hard-code them in scripts
